fixed error with hosting

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "wisconsin-experiment",
+  "main": "index.js",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +11,7 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
     "serve": "^11.3.0"
